--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 		<!-- JS -->
 	</head>
 	<body class="siteDown">
-		<div class="logo center-block">testing the logo placement</div>
+		<section>
+			<div class="headline">
+				<img src="img/wooster-white.png">
+				<h4>LocalPorch is temporarily closed<br>for some site enhancements.</h4>
+				<h4>We expect to be back to business soon.</h4>
+			</div>
+			<div class="logo"><img src="img/logo_large.png"></div>
+		</section>
 	</body>
 </html>
